--- a/index.html
+++ b/index.html
@@ -8,8 +8,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!--Arquivos CSS-->
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/header.css">
 </head>
 <body>
-    <h1>Rafael</h1>
+    <div class="main">
+        <header class="header">
+            <img src="/assets/img/foto.jpg" alt="Minha foto" class="photo">
+
+            <h1 class="title">Olá, <br>eu sou Rafael Ciriaco da Silva</h1>
+        
+            <div class="informations">
+                <p>Desenvolvedor</p>
+                <p>Americana - SP</p>
+                <p>(19) 98182-5684</p>
+                <p>rafaelcloud83@gmail.com</p>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
