mobile first css

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
             <h1 class="title">Olá, <br>eu sou Rafael Ciriaco da Silva</h1>
         
-            <div class="informations">
-                <p>Desenvolvedor</p>
-                <p>Americana - SP</p>
-                <p>(19) 98182-5684</p>
-                <p>rafaelcloud83@gmail.com</p>
+            <div class="information">
+                <p class="cargo">Desenvolvedor</p>
+                <p class="local">Americana - SP</p>
+                <p class="fone">(19) 98182-5684</p>
+                <p class="email">rafaelcloud83@gmail.com</p>
             </div>
         </header>
     </div>
