--- a/index.html
+++ b/index.html
@@ -24,18 +24,20 @@
 <body>
     <main class="main">
         <header class="header">
-            <img src="/assets/img/foto.jpg" alt="Minha foto" class="photo">
+            <img src="/assets/img/my-photo.png" alt="Minha foto" class="photo" id="profile.photo">
 
-            <h1 class="title">Olá, <br>eu sou Rafael Ciriaco da Silva</h1>
+            <h1 class="title">
+                Olá, <br>eu sou <span id="profile.name">Carregando...</span>
+            </h1>
         
             <div class="information">
-                <p class="cargo">Desenvolvedor</p>
-                <p class="local">Americana - SP</p>
+                <p class="cargo" id="profile.job">Carregando...</p>
+                <p class="local" id="profile.location">Carregando...</p>
                 <p class="fone">
-                    <a href="tel:(19) 98182-5684">(19) 98182-5684</a>
+                    <a href="tel:(19) 98182-5684" id="profile.phone">Carregando...</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:rafaelcloud83@gmail.com">rafaelcloud83@gmail.com</a>
+                    <a href="mailto:rafaelcloud83@gmail.com"id="profile.email">Carregando...</a>
                 </p>
             </div>
         </header>
@@ -150,5 +152,7 @@
     </main>
 
     <script src="/assets/js/acordeon.js"></script>
+    <script src="/assets/js/api.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
